assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Open+Sans:wght@400;500;600;700;800&family=Poppins&family=Roboto&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Open Sans', sans-serif;
}

/* COMMONS */

a{
    color: grey;
}

/* UTILITIES */

.d-flex{
    display: flex;
}

.f-align-center{
    align-items: center;
}

.f-grow{
    flex-grow: 1;
}

.h-100{
    height: 100%;
}

.margin-left-10{
    margin-left: 10px;
}

/* CONTAINER */

.container{
    height: 100vh;
    background: rgb(0,150,136);
    background: linear-gradient(180deg, rgba(0,150,136,1) 20%, rgba(217,219,212,1) 20%);
    display: flex;
    justify-content: center;
    align-items: center;
}

.app-container{
    height: 90%;
    width: 80%;
    background-color: grey;
    display: flex;
}

/* LEFT CONTAINER */

.left-container{
    width: 35%;
    background-color: white;
    display: flex;
    flex-direction: column;
    border-right: 1px solid lightgrey;
}

/* PROFILE SECTION */

.profile-section{
    height: 70px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
    background-color: #EAEAEA;
}

.img-box{
    height: 50px;
    width: 50px;
    border-radius: 50%;
    vertical-align: middle;
}

.profile-img{
    height: 50px;
    width: 50px;
    border-radius: 50%;
}

.icons-box > *{
    margin-right: 20px;
    font-size: 1.3rem;
    color: #B1B1B1;
}

/* NOTIFICATION SECTION */

.notifications-section{
    height: 80px;
    background-color: #8EDAFC;
    display: flex;
    align-items: center;
    padding: 20px;
}

.notifications-section > *{
    margin-right: 10px;
}

.bell-box{
    height: 50px;
    width: 50px;
    border-radius: 50%;
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

.fa-bell-slash{
    color: #8EDAFC;
    font-size: 1.2rem;
}

/* CONTACT SEARCH SECTION */

.contacts-search-section{
    height: 50px;
    display: flex;
    align-items: center;
    padding: 10px;
    background-color: #FAFAFA;
}

.search-btn{
    width: 10%;
    height: 35px;
    border: 1px solid #ebeaea;
    background-color: white;
    border-right: 2px solid #FAFAFA;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

.searchbar-style-1{
    width: 90%;
    height: 35px;
    border: 1px solid #ebeaea;
    padding-left: 10px;
}

/* CHAT LIST SECTION */

.chat-list-section{
    flex-grow: 1;
    background-color: #FAFAFA;
    overflow: auto;
}

.contact-card{
    display: flex;
    justify-content: space-between;
    border-top: 1px solid lightgrey;
    padding: 10px;
}

/* RIGHT CONTAINER */

.right-container{
    width: 65%;
    background-color: lightgrey;
    display: flex;
    flex-direction: column;
}

.search-btn .fa-magnifying-glass{
    color: #B1B1B1;
    font-size: 1rem;
}

/* CHAT BOX */

.chat-box{
    flex-grow: 1;
    background-image: url(../img/mine.jpg);
    background-repeat: repeat;
}

.text-line{
    display: flex;
    flex-direction: column;
    margin: 10px 20px;
}

.message-box{
    width: 30%;
    padding: 10px;
    border-radius: 10px;
}

.message-sent{
    align-self: flex-end;
    background-color: #D5F9BA;
}

.message-received{
    background-color: white;
}

/* SEND MESSAGE SECTION */

.send-message-section{
    height: 70px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    background-color: #F3EEEA;
}

.send-message-section i{
    font-size: 1.3rem;
    color: grey;
    margin: 0 20px;
}

.searchbar-style-2{
    width: 100%;
    height: 100%;
    border: 1px solid #ebeaea;
    border-radius: 5px;
    padding-left: 20px;
}

